--- a/app/src/main/res/layout/fragment_cursor.xml
+++ b/app/src/main/res/layout/fragment_cursor.xml
@@ -36,7 +36,11 @@
                     android:layout_weight="1"
                     android:onClick="@{() -> kbservice.copyText()}"
                     android:text="복사"
+                    android:textColor="@{kbviewmodel.observeKBFunctionFontColor}"
                     android:textSize="12dp"
+                    app:customTheme_padding="@{kbviewmodel.observeHeight}"
+                    app:customTheme_theme="@{kbviewmodel.observeKBTheme}"
+                    app:customTheme_view="@{2}"
                     app:fontType="@{kbviewmodel.observeKBFontType}" />
 
                 <Button
@@ -46,7 +50,11 @@
                     android:layout_weight="1"
                     android:onClick="@{() -> kbservice.pasteText()}"
                     android:text="붙여넣기"
+                    android:textColor="@{kbviewmodel.observeKBFunctionFontColor}"
                     android:textSize="12dp"
+                    app:customTheme_padding="@{kbviewmodel.observeHeight}"
+                    app:customTheme_theme="@{kbviewmodel.observeKBTheme}"
+                    app:customTheme_view="@{2}"
                     app:fontType="@{kbviewmodel.observeKBFontType}" />
 
                 <Button
@@ -56,7 +64,11 @@
                     android:layout_weight="1"
                     android:onClick="@{() -> kbservice.cutText()}"
                     android:text="잘라내기"
+                    android:textColor="@{kbviewmodel.observeKBFunctionFontColor}"
                     android:textSize="12dp"
+                    app:customTheme_padding="@{kbviewmodel.observeHeight}"
+                    app:customTheme_theme="@{kbviewmodel.observeKBTheme}"
+                    app:customTheme_view="@{2}"
                     app:fontType="@{kbviewmodel.observeKBFontType}" />
             </LinearLayout>
 
@@ -73,7 +85,11 @@
                     android:layout_weight="1"
                     android:onClick="@{() -> kbservice.selectAll()}"
                     android:text="전체 선택"
+                    android:textColor="@{kbviewmodel.observeKBFunctionFontColor}"
                     android:textSize="12dp"
+                    app:customTheme_padding="@{kbviewmodel.observeHeight}"
+                    app:customTheme_theme="@{kbviewmodel.observeKBTheme}"
+                    app:customTheme_view="@{2}"
                     app:fontType="@{kbviewmodel.observeKBFontType}" />
 
                 <ImageButton
@@ -83,10 +99,13 @@
                     android:layout_gravity="center"
                     android:layout_weight="1"
                     android:elevation="2dp"
-                    android:onClick="@{() -> kbservice.moveCursorToFirst()}"
                     android:scaleType="fitCenter"
                     android:src="@drawable/keyic_firstpage_black"
-                    app:padding="@{kbviewmodel.observeHeight}" />
+                    app:colorFilter="@{kbviewmodel.observeKBFontColor}"
+                    app:customTheme_padding="@{kbviewmodel.observeHeight}"
+                    app:customTheme_theme="@{kbviewmodel.observeKBTheme}"
+                    app:customTheme_view="@{1}"
+                    app:onTouch="@{kbservice.rListenerCursorFirst}" />
 
                 <ImageButton
                     android:id="@+id/frag_cursor_up"
@@ -95,10 +114,13 @@
                     android:layout_gravity="center"
                     android:layout_weight="1"
                     android:elevation="2dp"
-                    android:onClick="@{() -> kbservice.moveCursorToUp()}"
                     android:scaleType="fitCenter"
                     android:src="@drawable/keyic_arrowup_black"
-                    app:padding="@{kbviewmodel.observeHeight}" />
+                    app:colorFilter="@{kbviewmodel.observeKBFontColor}"
+                    app:customTheme_padding="@{kbviewmodel.observeHeight}"
+                    app:customTheme_theme="@{kbviewmodel.observeKBTheme}"
+                    app:customTheme_view="@{1}"
+                    app:onTouch="@{kbservice.rListenerCursorUp}" />
 
                 <ImageButton
                     android:id="@+id/frag_cursor_lastChar"
@@ -107,10 +129,13 @@
                     android:layout_gravity="center"
                     android:layout_weight="1"
                     android:elevation="2dp"
-                    android:onClick="@{() -> kbservice.moveCursorToLast()}"
                     android:scaleType="fitCenter"
                     android:src="@drawable/keyic_lastpage_black"
-                    app:padding="@{kbviewmodel.observeHeight}" />
+                    app:colorFilter="@{kbviewmodel.observeKBFontColor}"
+                    app:customTheme_padding="@{kbviewmodel.observeHeight}"
+                    app:customTheme_theme="@{kbviewmodel.observeKBTheme}"
+                    app:customTheme_view="@{1}"
+                    app:onTouch="@{kbservice.rListenerCursorLast}" />
 
                 <ImageButton
                     android:id="@+id/frag_cursor_foredelete"
@@ -119,10 +144,13 @@
                     android:layout_weight="1"
                     android:elevation="2dp"
                     android:gravity="center"
-                    android:onClick="@{() -> kbservice.foreDelFunction()}"
                     android:scaleType="fitCenter"
                     android:src="@drawable/keyic_foredelete_black"
-                    app:padding="@{kbviewmodel.observeHeight}" />
+                    app:colorFilter="@{kbviewmodel.observeKBFunctionFontColor}"
+                    app:customTheme_padding="@{kbviewmodel.observeHeight}"
+                    app:customTheme_theme="@{kbviewmodel.observeKBTheme}"
+                    app:customTheme_view="@{3}"
+                    app:onTouch="@{kbservice.rListenerCursorForeDel}" />
             </LinearLayout>
 
             <LinearLayout
@@ -137,8 +165,12 @@
                     android:layout_height="match_parent"
                     android:layout_weight="1"
                     android:onClick="@{() -> kbservice.selectWord()}"
-                    android:text="선택"
+                    android:text="@{kbviewmodel.isSelecting==true ? @string/selection_cancel : @string/selection_activate}"
+                    android:textColor="@{kbviewmodel.observeKBFunctionFontColor}"
                     android:textSize="12dp"
+                    app:customTheme_padding="@{kbviewmodel.observeHeight}"
+                    app:customTheme_theme="@{kbviewmodel.observeKBTheme}"
+                    app:customTheme_view="@{2}"
                     app:fontType="@{kbviewmodel.observeKBFontType}" />
 
                 <ImageButton
@@ -148,10 +180,13 @@
                     android:layout_gravity="center"
                     android:layout_weight="1"
                     android:elevation="2dp"
-                    android:onClick="@{() -> kbservice.moveCursorToLeft()}"
                     android:scaleType="fitCenter"
                     android:src="@drawable/keyic_arrowleft_black"
-                    app:padding="@{kbviewmodel.observeHeight}" />
+                    app:colorFilter="@{kbviewmodel.observeKBFontColor}"
+                    app:customTheme_padding="@{kbviewmodel.observeHeight}"
+                    app:customTheme_theme="@{kbviewmodel.observeKBTheme}"
+                    app:customTheme_view="@{1}"
+                    app:onTouch="@{kbservice.rListenerCursorLeft}" />
 
                 <ImageButton
                     android:id="@+id/frag_cursor_down"
@@ -160,10 +195,13 @@
                     android:layout_gravity="center"
                     android:layout_weight="1"
                     android:elevation="2dp"
-                    android:onClick="@{() -> kbservice.moveCursorToDown()}"
                     android:scaleType="fitCenter"
                     android:src="@drawable/keyic_arrowdown_black"
-                    app:padding="@{kbviewmodel.observeHeight}" />
+                    app:colorFilter="@{kbviewmodel.observeKBFontColor}"
+                    app:customTheme_padding="@{kbviewmodel.observeHeight}"
+                    app:customTheme_theme="@{kbviewmodel.observeKBTheme}"
+                    app:customTheme_view="@{1}"
+                    app:onTouch="@{kbservice.rListenerCursorDown}" />
 
                 <ImageButton
                     android:id="@+id/frag_cursor_right"
@@ -172,10 +210,13 @@
                     android:layout_gravity="center"
                     android:layout_weight="1"
                     android:elevation="2dp"
-                    android:onClick="@{() -> kbservice.moveCursorToRight()}"
                     android:scaleType="fitCenter"
                     android:src="@drawable/keyic_arrowright_black"
-                    app:padding="@{kbviewmodel.observeHeight}" />
+                    app:colorFilter="@{kbviewmodel.observeKBFontColor}"
+                    app:customTheme_padding="@{kbviewmodel.observeHeight}"
+                    app:customTheme_theme="@{kbviewmodel.observeKBTheme}"
+                    app:customTheme_view="@{1}"
+                    app:onTouch="@{kbservice.rListenerCursorRight}" />
 
                 <ImageButton
                     android:id="@+id/frag_cursor_delete"
@@ -184,10 +225,13 @@
                     android:layout_weight="1"
                     android:elevation="2dp"
                     android:gravity="center"
-                    android:onClick="@{() -> kbservice.delFunction()}"
                     android:scaleType="fitCenter"
                     android:src="@drawable/keyic_delete_black"
-                    app:padding="@{kbviewmodel.observeHeight}" />
+                    app:colorFilter="@{kbviewmodel.observeKBFunctionFontColor}"
+                    app:customTheme_padding="@{kbviewmodel.observeHeight}"
+                    app:customTheme_theme="@{kbviewmodel.observeKBTheme}"
+                    app:customTheme_view="@{3}"
+                    app:onTouch="@{kbservice.repeatListenerDels[8]}" />
             </LinearLayout>
 
             <LinearLayout
@@ -203,10 +247,13 @@
                     android:layout_weight=".5"
                     android:elevation="2dp"
                     android:gravity="center"
-                    android:onClick="@{() -> kbviewmodel.changeMode(3)}"
+                    android:onClick="@{() -> kbservice.changeMode(3)}"
                     android:scaleType="fitCenter"
                     android:src="@drawable/keyic_kbd_black"
-                    app:padding="@{kbviewmodel.observeHeight}" />
+                    app:colorFilter="@{kbviewmodel.observeKBFunctionFontColor}"
+                    app:customTheme_padding="@{kbviewmodel.observeHeight}"
+                    app:customTheme_theme="@{kbviewmodel.observeKBTheme}"
+                    app:customTheme_view="@{3}" />
 
                 <Button
                     android:id="@+id/frag_cursor_space"
@@ -214,11 +261,14 @@
                     android:layout_height="match_parent"
                     android:layout_weight="1.5"
                     android:gravity="center"
-                    android:onClick="@{(v) -> kbservice.inputSpecial(v)}"
                     android:text="SPACE"
-                    android:textColor="@color/darkgrey"
+                    android:textColor="@{kbviewmodel.observeKBFunctionFontColor}"
                     android:textSize="14sp"
-                    app:fontType="@{kbviewmodel.observeKBFontType}" />
+                    app:customTheme_padding="@{kbviewmodel.observeHeight}"
+                    app:customTheme_theme="@{kbviewmodel.observeKBTheme}"
+                    app:customTheme_view="@{2}"
+                    app:fontType="@{kbviewmodel.observeKBFontType}"
+                    app:onTouch="@{kbservice.repeatListenerSpecials[21]}" />
 
                 <ImageButton
                     android:id="@+id/frag_cursor_enter"
@@ -230,7 +280,10 @@
                     android:onClick="@{() -> kbservice.enterFunction()}"
                     android:scaleType="fitCenter"
                     android:src="@drawable/keyic_enter_black"
-                    app:padding="@{kbviewmodel.observeHeight}" />
+                    app:colorFilter="@{kbviewmodel.observeKBFunctionFontColor}"
+                    app:customTheme_padding="@{kbviewmodel.observeHeight}"
+                    app:customTheme_theme="@{kbviewmodel.observeKBTheme}"
+                    app:customTheme_view="@{4}" />
             </LinearLayout>
         </LinearLayout>
     </FrameLayout>
