--- a/app/src/main/res/layout/setting_main_tab1.xml
+++ b/app/src/main/res/layout/setting_main_tab1.xml
@@ -125,7 +125,7 @@
                     android:layout_height="match_parent"
                     android:layout_margin="5dp"
                     android:layout_weight="1"
-                    android:autoSizeTextType="uniform"
+                    android:textSize="16sp"
                     android:background="@drawable/button2"
                     android:gravity="center_vertical"
                     android:padding="10dp"
